--- a/aspnet-core/src/RepositoryManager.Web.Host/RepositoryManager.Web.Host.csproj
+++ b/aspnet-core/src/RepositoryManager.Web.Host/RepositoryManager.Web.Host.csproj
@@ -42,4 +42,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
 </Project>
