去掉abp的默权限 暂时去掉jwt的token验证

--- a/aspnet-core/src/RepositoryManager.Web.Host/appsettings.json
+++ b/aspnet-core/src/RepositoryManager.Web.Host/appsettings.json
@@ -9,7 +9,7 @@
   },
   "Authentication": {
     "JwtBearer": {
-      "IsEnabled": "true",
+      "IsEnabled": "false",
       "SecurityKey": "RepositoryManager_C421AAEE0D114E9C",
       "Issuer": "RepositoryManager",
       "Audience": "RepositoryManager"
