--- a/aspnet-core/src/RepositoryManager.Core/RepositoryManager.Core.csproj
+++ b/aspnet-core/src/RepositoryManager.Core/RepositoryManager.Core.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="5.13.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.3.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Business\Customer\" />
+    <Folder Include="Business\Supplier\" />
+    <Folder Include="Business\Warehouse\" />
+  </ItemGroup>
 </Project>
