--- a/aspnet-core/src/RepositoryManager.Application/RepositoryManager.Application.csproj
+++ b/aspnet-core/src/RepositoryManager.Application/RepositoryManager.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <VersionPrefix>1.0.0.0</VersionPrefix>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,8 +14,11 @@
     <ProjectReference Include="..\RepositoryManager.Core\RepositoryManager.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Business\Customer\" />
-    <Folder Include="Business\Supplier\" />
-    <Folder Include="Business\Warehouse\" />
+    <Folder Include="Business\Customer\AppService\" />
+    <Folder Include="Business\Customer\Dto\" />
+    <Folder Include="Business\Customer\IAppService\" />
+    <Folder Include="Business\Supplier\AppService\" />
+    <Folder Include="Business\Supplier\Dto\" />
+    <Folder Include="Business\Supplier\IAppService\" />
   </ItemGroup>
 </Project>
