--- a/aspnet-core/src/RepositoryManager.Web.Host/appsettings.json
+++ b/aspnet-core/src/RepositoryManager.Web.Host/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "server=localhost;port=3306;database=RepositoryManager;uid=root;Charset=utf8;Convert Zero Datetime=True ;Allow Zero Datetime=True;"
+    "Default": "server=47.98.50.115;port=3306;database=RepositoryManager;uid=root;password=123456;Charset=utf8;Convert Zero Datetime=True ;Allow Zero Datetime=True;"
+    // "Default": "server=localhost;port=3306;database=RepositoryManager;uid=root;Charset=utf8;Convert Zero Datetime=True ;Allow Zero Datetime=True;"
   },
   "App": {
     "ServerRootAddress": "http://localhost:21021/",
