修改jwt的登陆 以及添加缓存Manager

--- a/aspnet-core/src/RepositoryManager.Web.Host/appsettings.json
+++ b/aspnet-core/src/RepositoryManager.Web.Host/appsettings.json
@@ -10,7 +10,7 @@
   },
   "Authentication": {
     "JwtBearer": {
-      "IsEnabled": "false",
+      "IsEnabled": "true",
       "SecurityKey": "RepositoryManager_C421AAEE0D114E9C",
       "Issuer": "RepositoryManager",
       "Audience": "RepositoryManager"
@@ -23,4 +23,4 @@
       }
     }
   }
-}
+} 
